# mood-based-music-recommendation

backend/: .cache  .gitignore  main.py  pyproject.toml
backend/app/: config.py  main.py  model.py  music.py
frontend/src/: App.css  App.jsx
frontend/src/Components/: FileUpload.jsx  MusicResults.jsx
